--- a/drivers/tty/serial/Kconfig
+++ b/drivers/tty/serial/Kconfig
@@ -1663,6 +1663,44 @@ config SERIAL_MVEBU_CONSOLE
 	  and warnings and which allows logins in single user mode)
 	  Otherwise, say 'N'.
 
+config SERIAL_NXP2120_UART
+    tristate "NXP2120 serial port support"
+    depends on CPU_NXP2120
+    select SERIAL_CORE
+    default y
+    help
+      Serial port support for the Nexell's NXP2120 SOC.
+
+config SERIAL_NXP2120_CONSOLE
+	bool "Support for console on Nexell Soc serial port"
+	depends on SERIAL_NXP2120_UART=y
+	select SERIAL_CORE_CONSOLE
+	select SERIAL_EARLYCON	
+	help
+	  Allow selection of the Nexell's nxp2120 serial ports for use as
+	  an virtual console.
+
+config SERIAL_NXP2120_UART_PORT0
+	bool "Nexell serial port 0"
+	depends on SERIAL_NXP2120_UART
+	default y
+
+config SERIAL_NXP2120_UART_PORT0_RXDMA
+		bool "Support DMA on Nexell serial port 0"
+		depends on SERIAL_NXP2120_UART
+		default n
+
+config SERIAL_NXP2120_UART_PORT1
+	bool "Nexell serial port 1"
+	depends on SERIAL_NXP2120_UART
+	default n
+
+config SERIAL_NXP2120_UART_PORT1_RXDMA
+		bool "Support DMA on Nexell serial port 1"
+		depends on SERIAL_NXP2120_UART
+		default n	  
+
+		
 endmenu
 
 config SERIAL_MCTRL_GPIO
