--- a/drivers/media/platform/Makefile
+++ b/drivers/media/platform/Makefile
@@ -57,6 +57,15 @@ obj-$(CONFIG_VIDEO_AM437X_VPFE)		+= am437x/
 
 obj-$(CONFIG_VIDEO_XILINX)		+= xilinx/
 
+obj-$(CONFIG_VIDEO_NEXELL)		+= nexell/
+obj-$(CONFIG_VIDEO_NEXELL_NXS)		+= nexell/
+
+obj-$(CONFIG_VIDEO_NEXELL_CODEC)	+= nxp-vpu/
+
+obj-$(CONFIG_NEW_V4L2_NEXELL)	+= nexell_new/
+
+obj-$(CONFIG_VIDEO_NXP2120)		+= nxp2120/
+
 obj-$(CONFIG_VIDEO_RCAR_VIN)		+= rcar-vin/
 
 obj-$(CONFIG_VIDEO_ATMEL_ISC)		+= atmel/
